[package]
name = "rad1o-rust"
version = "0.1.0"
authors = ["Astro <astro@spaceboyz.net>"]

[dependencies]
volatile-register = "0.1.2"
#rust-libcore = "0.0.3"
#r0 = "0.1.0"
#cortex-m = "0.1.5"
#rlibc = "1.0.0"

[profile.release]
lto = true
panic = 'abort'

[target.thumbv7em-none-eabihf.dependencies]
