[package]
name = "rad1o-l0dable"
version = "0.0.0"
authors = ["Astro <astro@spaceboyz.net>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Build l0dable apps for the CCCamp2015 rad1o badge"
documentation = "https://docs.rs/rad1o-l0dable"
keywords = ["arm", "cortex-m", "nxp", "ccc", "embedded-hal"]
license = "Apache-2.0"
repository = "https://github.com/astro/rad1o-rust"

[dependencies]
r0 = "0.2.2"
lpc43xx = "0.1.0"
embedded-hal = "0.2.1"

[profile.release]
debug = 2
lto = true
